--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^10.16.15",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
