--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10",
