--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.4",
     "@nextui-org/react": "^2.2.9",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^10.16.15",
+    "mysql2": "^3.9.3",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
