--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^10.16.15",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.3",
     "next": "14.0.0",
     "react": "^18",
