--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
