database pass updated

--- a/database/config/config.json
+++ b/database/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "iEqlPnssxtOXK1LuS5JJ",
+    "password": "jnMuGuSJY1kbRfw6Z7rK",
     "database": "ramble",
     "host": "127.0.0.1",
     "dialect": "mysql"
