--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@nextui-org/react": "^2.2.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "framer-motion": "^10.16.15",
+    "framer-motion": "^12.15.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.3",
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
